add small changes

--- a/public/css/mainpage.css
+++ b/public/css/mainpage.css
@@ -70,9 +70,14 @@
     }
 
     .main-container.split .right {
-        width: 100%;
-        height: 290px;
         border-left: none;
+    }
+
+    .main-container.split .right .img-custom {
+        object-fit: cover;
+        max-width: 100%;
+        height: 280%;
+        object-position: -100px;
     }
 
 }
