--- a/public/css/servicepage.css
+++ b/public/css/servicepage.css
@@ -1,14 +1,26 @@
-.main-container.divide {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+#loc-title {
+    text-align: center;
 }
 
 #map {
-    width: 500px;
-    height: 500px;
     border-radius: 5px;
+    margin: 0 auto;
 }
+
+@media only screen and (max-width: 550px) {
+    #map {
+        width: 300px;
+        height: 300px;
+    }
+}
+
+@media only screen and (min-width: 551px) {
+    #map {
+        width: 500px;
+        height: 500px;
+    }
+}
+
 .marker {
     background-image: url('/public/img/mapbox-icon.png');
     background-size: cover;
@@ -23,4 +35,8 @@
 .mapboxgl-popup-content {
     text-align: center;
     font-family: 'Open Sans', sans-serif;
+}
+
+.text-description {
+    margin: 20px;
 }
