--- a/public/css/header.css
+++ b/public/css/header.css
@@ -2,8 +2,8 @@
     overflow: auto;
 }
 
-@media only screen and (min-width: 420px) {
-    .nav-container {
+@media only screen and (max-width: 420px) {
+    #app-header .nav-container {
         padding: 0;
     }
 }
