--- a/public/css/choosecarpage.css
+++ b/public/css/choosecarpage.css
@@ -14,9 +14,9 @@
     border-radius: 33px;
 }
 
-@media only screen and (min-width: 590px) {
+@media only screen and (max-width: 550px) {
     .tile-container .tile {
-        margin: 0 auto;
+        margin: 50px auto;
     }
 }
 
