change element class to id and change it style

--- a/public/css/servicepage.css
+++ b/public/css/servicepage.css
@@ -37,6 +37,7 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-.text-description {
-    margin: 20px;
+#loc-description {
+    padding: 20px;
+    font-size: 24px;
 }
